
=========================================================================
Work in Progress:

Bug. Deleting files is extremely slow in some cases because every time a file is deleted the results page is been reloaded (Need to disable Results while deleting and load the page only at the end).

=========================================================================
Done:

DuplicateFileTool 1.0.911: 2022-04-28
Fix. Improvements and optimizations.

DuplicateFileTool 1.0.844: 2022-01-18
New. Created the installer project.

DuplicateFileTool 1.0.844: 2022-01-10
Bug. Results page right side bar buttons is enabbled during deletion.

DuplicateFileTool 1.0.822: 2022-01-09
New. The icons on the buttons on the results tab should be grayed out when disabled.
Bug. Clear results button is enabled at start when the results list is empty.
Bug. After finishing a search the search path list stays read-only.

DuplicateFileTool 1.0.816: 2022-01-07
Fix. Changed the way how the controls is enabled/disabled.
Bug. Settings is enabled while the search is in progress, should be disabled.
Bug. While an automatic selection is in progress the interface entry was enabled.
Bug. Auto select by path progress and final text was not localized.
Fix. Sorting by ascending/descending arrow need to be grayed out when the feature is disabled during search.
Bug. Results sorting order button tooltip was not set untill it's value changed.

DuplicateFileTool 1.0.787: 2021-12-15
Fix. Removed NuGet packages that was actully not used to reduce dependencies and the total size.
Fix. Optimized some texts.
Fix. Allow to select multiple rows on the errors page.
Bug. Error messages on the errors page is not localized.
Bug. Include/Exclude icon does not change in the search paths list when the value changes if the culture is not english.
Bug. List of errors does not have the localized table header.
Bug. Types of the errors on the Errors page is not localized.